Activity Log: Fix alignment inside filterbar

--- a/client/my-sites/activity/filterbar/style.scss
+++ b/client/my-sites/activity/filterbar/style.scss
@@ -77,9 +77,14 @@
 
 	.filterbar__selection.is-active,
 	.filterbar__selection.is-active:focus,
+	.filterbar__selection.is-active:hover {
+		margin: 8px;
+	}
+
+	.filterbar__selection.is-active,
+	.filterbar__selection.is-active:focus,
 	.filterbar__selection.is-active:hover,
 	.date-range.toggle-visible .filterbar__selection.button:not( .is-selected ) {
-		margin: 8px;
 		border-radius: 2px;
 		border: 1px solid var( --color-neutral-60 );
 		background: var( --color-neutral-60 );
